# bitworks

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
flagenum-derive/: Cargo.toml
flagenum-derive/src/: lib.rs
src/: bit.rs  bit_ref.rs  bitenum.rs  bitfield.rs  bitfield128.rs  bitfield16.rs  bitfield32.rs  bitfield64.rs  bitfield8.rs  bitfield_bytes.rs  bitset.rs  bitset128.rs  bitset16.rs  bitset32.rs  bitset64.rs  bitset8.rs  byte_field.rs  byte_set.rs  byteset.rs  conversion.rs  error.rs  flagenum.rs  flags_enum.rs  index.rs  iter.rs  lib.rs  safety_markers.rs  size_marker.rs
tests/: bitflags.rs  readme.rs
