[package]
name = "bitworks"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate meant to provide easy to use bitsets with emphasis on safety."
repository = "https://github.com/TRI99ERED/bitworks"
readme = "README.md"
keywords = ["bitfield", "bitwise", "data-structure", "bitset"]
categories = ["data-structures"]

[features]
serde = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", optional = true, features = ["derive"] }
